# mahsjong

./: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  config.yml
assets/json/: animations.json  assets.json  constants.json  loading.json  main_menu.json  server.json
assets/widgets/button/: landingTextbutton.json  menubutton.json  pausebutton.json  scorebutton_main.json  scorepointbutton.json  settingbutton_name.json  settingbutton_onoff.json
cugl/: __main__.py
cugl.dir/: Makefile  cmake_install.cmake
cugl.dir/sdl2pckg.dir/: Makefile  cmake_install.cmake
cugl/scripts/: android.py  apple.py  cmake.py  util.py  windows.py
cugl/sdlapp/: __main__.py
cugl/tools/windows/: CMakeLists.txt  main.cpp
source/: MJAnimatedNode.cpp  MJAnimatedNode.h  MJAnimationController.cpp  MJAnimationController.h  MJApp.cpp  MJApp.h  MJAudioController.cpp  MJAudioController.h  MJClientScene.cpp  MJClientScene.h  MJDiscardPile.cpp  MJDiscardPile.h  MJDiscardUINode.cpp  MJDiscardUINode.h  MJDiscardUIScene.cpp  MJDiscardUIScene.h  MJGameController.h  MJGameOverScene.cpp  MJGameOverScene.h  MJGameScene.cpp  MJGameScene.h  MJHelpScene.cpp  MJHelpScene.h  MJHostScene.cpp  MJHostScene.h  MJInfoScene.cpp  MJInfoScene.h  MJInputController.cpp  MJInputController.h  MJLevelScene.cpp  MJLevelScene.h  MJLoadingScene.cpp  MJLoadingScene.h  MJMainMenu.cpp  MJMainMenu.h  MJMatchController.cpp  MJMatchController.h  MJMatchModel.cpp  MJMatchModel.h  MJMenuScene.cpp  (+28 more)
source/shaders/: moveTile.frag  moveTile.vert
(+606 files in other folders)
